# service_auth

./: README.md
api/: Cargo.toml
api/src/: domain.rs  main.rs  state.rs
api/src/controller/: controller.rs  endpoint.rs  mod.rs  model.rs
api/src/infra/: repository.rs
api/src/infra/db/: mod.rs  prelude.rs  user.rs
databases/postgres/: flyway.conf
databases/postgres/sql/release-1.0/: V1__Create_user_table.sql
development/: appsetting_development.json  docker-compose.yaml  docker-compose.yml  envoy.yaml  index.html
development/entrypoints/: load-extensions.sh
ui/: .prettierrc.js  package.json
ui/src/modules/component/common/: form.tsx
ui/src/modules/component/signin/: SignInContainer.tsx
ui/src/modules/component/signup/: SignUpContainer.tsx
ui/style/: global.style.css
